# piper.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  main.c  main.cpp
src/: phoneme_ids.cpp  phoneme_ids.hpp  phonemize.cpp  phonemize.hpp  piper.cpp  piper.h  piper.hpp
